Fixed too long tags

--- a/src/modules/tag_group/tag_group.scss
+++ b/src/modules/tag_group/tag_group.scss
@@ -68,10 +68,12 @@
     padding: 0;
     list-style-type: none;
     font-size: 0;
+    max-width: 100%;
 
     li {
       display: inline-block;
       margin-right: 2px;
+      max-width: 100%;
     }
   }
 
